# importEVorNot

./: .dockerignore  .gitignore  Dockerfile  README.md  fly.toml  pyproject.toml
frontend/: package-lock.json  package.json
frontend/src/: App.js  index.js  style.scss
mobile_de/: capacities.csv  car.html  car_mapping.py  drivetype.csv  mobilede_notebook.ipynb  mobilede_parser.py  mobilede_utils.py  search.html
nettiauto/: .~lock.results.csv#  README.md  README.txt  accessories_mapping.ipynb  bodyTypes_for_vehicleType_car.json  data_columns.txt  example_X.json  example_y.json  feature_names.json  model.json  nettiauto_dataset.csv  nettiauto_dataset_parsing.ipynb  nettiauto_model.ipynb  preprocess.py  preprocessed_results.csv  results.csv
nettiauto/query_results/: 2021-01_response_1696071482757.json  2021-02_response_1696071737045.json  2021-03_response_1696072016857.json  2021-04_response_1696072267024.json  2021-05_response_1696072588298.json  2021-06_response_1696072850927.json  2021-07_response_1696073239785.json  2021-08_response_1696073507847.json  2021-09_response_1696073655890.json  2022-01_response_1696074468991.json  2022-02_response_1696074615821.json  2022-03_response_1696074839641.json  2022-04_response_1696075021170.json  2022-05_response_1696075239764.json  2022-07_response_1696075876798.json  2022-07_response_1696079148457.json  2022-08_response_1696076147323.json  2022-09_response_1696076364847.json  2022-10_response_1696076596294.json  2022-11_response_1696076798891.json  (+25 more)
src/: app.py  mobilede_parser.py  mobilede_utils.py  routes.py
(+2 files in other folders)
