[tool.poetry]
name = "importEVorNot"
version = "0.1.0"
description = ""
authors = ["jatufin"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.8"
Flask = "^2.2.2"
pandas = "^1.5.1"
matplotlib = "^3.6.2"
xgboost = "^2.0.0"
Flask-Cors = "^4.0.0"
scikit-learn = "^1.3.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
